@@ -1,1 +1,0 @@
-Opera is a powerful web browser both for work or for entertainment.
