@@ -1,347 +1,0 @@
-@comment $NetBSD: PLIST,v 1.12 2013/08/04 13:02:07 obache Exp $
-bin/opera
-lib/opera/gstreamer/plugins/libgstoperamatroska.so
-lib/opera/gstreamer/plugins/libgstoperavp8.so
-lib/opera/liboperagtk2.so
-lib/opera/liboperakde4.so
-lib/opera/opera
-${PLIST.linux}lib/opera/opera_autoupdatechecker
-lib/opera/plugins/README
-lib/opera/pluginwrapper/operapluginwrapper
-${PLIST.ia32w}lib/opera/pluginwrapper/operapluginwrapper-ia32-linux
-lib/opera/pluginwrapper/operapluginwrapper-native
-man/man1/opera.1
-share/applications/opera-browser.desktop
-share/doc/opera/LGPL-2
-${PLIST.linux}share/doc/opera/LGPL-3
-share/doc/opera/LICENSE
-share/doc/opera/README.gstreamer
-share/icons/hicolor/128x128/apps/opera-browser.png
-share/icons/hicolor/128x128/mimetypes/opera-extension.png
-share/icons/hicolor/16x16/apps/opera-browser.png
-share/icons/hicolor/16x16/mimetypes/opera-extension.png
-share/icons/hicolor/22x22/apps/opera-browser.png
-share/icons/hicolor/22x22/mimetypes/opera-extension.png
-share/icons/hicolor/24x24/apps/opera-browser.png
-share/icons/hicolor/24x24/mimetypes/opera-extension.png
-share/icons/hicolor/256x256/apps/opera-browser.png
-share/icons/hicolor/32x32/apps/opera-browser.png
-share/icons/hicolor/32x32/mimetypes/opera-extension.png
-share/icons/hicolor/48x48/apps/opera-browser.png
-share/icons/hicolor/48x48/mimetypes/opera-extension.png
-share/icons/hicolor/scalable/mimetypes/opera-extension.svg
-share/mime/packages/opera-extension.xml
-share/opera/cert.pem
-share/opera/defaults/bookmarks.adr
-share/opera/defaults/dictionaries.xml
-share/opera/defaults/feedreaders.ini
-share/opera/defaults/filehandler.ini
-share/opera/defaults/handlers-ignore.ini
-share/opera/defaults/license.txt
-share/opera/defaults/mailproviders.xml
-share/opera/defaults/plugin-ignore.ini
-share/opera/defaults/pluginpath.ini
-share/opera/defaults/public_domains.dat
-share/opera/defaults/search.ini
-share/opera/defaults/standard_speeddial.ini
-share/opera/defaults/standard_trusted_repositories.ini
-share/opera/defaults/tips_metadata.ini
-share/opera/defaults/webmailproviders.ini
-share/opera/defaults/xmlentities.ini
-share/opera/encoding.bin
-share/opera/extra/missingplugin.svg
-share/opera/extra/missingpluginhover.svg
-share/opera/extra/svg-mo.dat
-share/opera/extra/svg-mobd.dat
-share/opera/extra/svg-sa.dat
-share/opera/extra/svg-sabd.dat
-share/opera/extra/svg-se.dat
-share/opera/extra/svg-sebd.dat
-share/opera/extra/unix-opengl.blocklist.json
-share/opera/files.sig
-share/opera/files_old.sig
-share/opera/html40_entities.dtd
-share/opera/html5_entity_init.dat
-share/opera/lngcode.txt
-share/opera/locale/af/af.lng
-share/opera/locale/ar/ar.lng
-share/opera/locale/az/az.lng
-share/opera/locale/be/be.lng
-share/opera/locale/be/bookmarks.adr
-share/opera/locale/be/search.ini
-share/opera/locale/be/standard_speeddial.ini
-share/opera/locale/bg/bg.lng
-share/opera/locale/bg/bookmarks.adr
-share/opera/locale/bg/search.ini
-share/opera/locale/bg/standard_speeddial.ini
-share/opera/locale/bn/bn.lng
-share/opera/locale/cs/bookmarks.adr
-share/opera/locale/cs/cs.lng
-share/opera/locale/cs/search.ini
-share/opera/locale/cs/standard_speeddial.ini
-share/opera/locale/da/da.lng
-share/opera/locale/de/bookmarks.adr
-share/opera/locale/de/de.lng
-share/opera/locale/de/search.ini
-share/opera/locale/de/standard_speeddial.ini
-share/opera/locale/el/el.lng
-share/opera/locale/en-GB/en-GB.lng
-share/opera/locale/en/en.lng
-share/opera/locale/en/en.zip
-share/opera/locale/en/license.txt
-share/opera/locale/es-ES/bookmarks.adr
-share/opera/locale/es-ES/es-ES.lng
-share/opera/locale/es-ES/search.ini
-share/opera/locale/es-ES/standard_speeddial.ini
-share/opera/locale/es-LA/es-LA.lng
-share/opera/locale/et/et.lng
-share/opera/locale/fa/fa.lng
-share/opera/locale/fi/fi.lng
-share/opera/locale/fr-CA/fr-CA.lng
-share/opera/locale/fr/bookmarks.adr
-share/opera/locale/fr/fr.lng
-share/opera/locale/fr/search.ini
-share/opera/locale/fr/standard_speeddial.ini
-share/opera/locale/fy/fy.lng
-share/opera/locale/gd/gd.lng
-share/opera/locale/he/he.lng
-share/opera/locale/hi/hi.lng
-share/opera/locale/hr/hr.lng
-share/opera/locale/hu/bookmarks.adr
-share/opera/locale/hu/hu.lng
-share/opera/locale/hu/search.ini
-share/opera/locale/hu/standard_speeddial.ini
-share/opera/locale/id/id.lng
-share/opera/locale/it/bookmarks.adr
-share/opera/locale/it/it.lng
-share/opera/locale/it/search.ini
-share/opera/locale/it/standard_speeddial.ini
-share/opera/locale/ja/bookmarks.adr
-share/opera/locale/ja/ja.lng
-share/opera/locale/ja/search.ini
-share/opera/locale/ja/standard_speeddial.ini
-share/opera/locale/ka/ka.lng
-share/opera/locale/kk/kk.lng
-share/opera/locale/ko/ko.lng
-share/opera/locale/lt/lt.lng
-share/opera/locale/lv/lv.lng
-share/opera/locale/me/me.lng
-share/opera/locale/mk/mk.lng
-share/opera/locale/ms/ms.lng
-share/opera/locale/nb/bookmarks.adr
-share/opera/locale/nb/nb.lng
-share/opera/locale/nb/search.ini
-share/opera/locale/nb/standard_speeddial.ini
-share/opera/locale/nl/nl.lng
-share/opera/locale/nn/nn.lng
-share/opera/locale/pa/pa.lng
-share/opera/locale/pl/bookmarks.adr
-share/opera/locale/pl/pl.lng
-share/opera/locale/pl/search.ini
-share/opera/locale/pl/standard_speeddial.ini
-share/opera/locale/pt-BR/bookmarks.adr
-share/opera/locale/pt-BR/pt-BR.lng
-share/opera/locale/pt-BR/search.ini
-share/opera/locale/pt-BR/standard_speeddial.ini
-share/opera/locale/pt/pt.lng
-share/opera/locale/ro/bookmarks.adr
-share/opera/locale/ro/ro.lng
-share/opera/locale/ro/search.ini
-share/opera/locale/ro/standard_speeddial.ini
-share/opera/locale/ru/bookmarks.adr
-share/opera/locale/ru/ru.lng
-share/opera/locale/ru/search.ini
-share/opera/locale/ru/standard_speeddial.ini
-share/opera/locale/sk/bookmarks.adr
-share/opera/locale/sk/search.ini
-share/opera/locale/sk/sk.lng
-share/opera/locale/sk/standard_speeddial.ini
-share/opera/locale/sr/bookmarks.adr
-share/opera/locale/sr/search.ini
-share/opera/locale/sr/sr.lng
-share/opera/locale/sr/standard_speeddial.ini
-share/opera/locale/sv/sv.lng
-share/opera/locale/sw/sw.lng
-share/opera/locale/ta/ta.lng
-share/opera/locale/te/te.lng
-share/opera/locale/th/th.lng
-share/opera/locale/tl/tl.lng
-share/opera/locale/tr/bookmarks.adr
-share/opera/locale/tr/search.ini
-share/opera/locale/tr/standard_speeddial.ini
-share/opera/locale/tr/tr.lng
-share/opera/locale/uk/bookmarks.adr
-share/opera/locale/uk/search.ini
-share/opera/locale/uk/standard_speeddial.ini
-share/opera/locale/uk/uk.lng
-share/opera/locale/ur/ur.lng
-share/opera/locale/uz/uz.lng
-share/opera/locale/vi/vi.lng
-share/opera/locale/zh-cn/bookmarks.adr
-share/opera/locale/zh-cn/operaprefs_locale.ini
-share/opera/locale/zh-cn/search.ini
-share/opera/locale/zh-cn/standard_speeddial.ini
-share/opera/locale/zh-cn/zh-cn.lng
-share/opera/locale/zh-tw/zh-tw.lng
-share/opera/locale/zu/zu.lng
-share/opera/mathml.dtd
-share/opera/package-id.ini
-share/opera/pubsuffix.xml
-share/opera/region/ar/bookmarks.adr
-share/opera/region/ar/search.ini
-share/opera/region/ar/standard_speeddial.ini
-share/opera/region/au/bookmarks.adr
-share/opera/region/au/standard_speeddial.ini
-share/opera/region/cis/en/bookmarks.adr
-share/opera/region/cis/en/search.ini
-share/opera/region/cis/en/standard_speeddial.ini
-share/opera/region/cis/ru/bookmarks.adr
-share/opera/region/cis/ru/search.ini
-share/opera/region/cis/ru/standard_speeddial.ini
-share/opera/region/cn/browser.js
-share/opera/region/cn/en/bookmarks.adr
-share/opera/region/cn/en/search.ini
-share/opera/region/cn/en/standard_speeddial.ini
-share/opera/region/cn/turbosettings.xml
-share/opera/region/eg/bookmarks.adr
-share/opera/region/eg/search.ini
-share/opera/region/eg/standard_speeddial.ini
-share/opera/region/gb/bookmarks.adr
-share/opera/region/gb/search.ini
-share/opera/region/gb/standard_speeddial.ini
-share/opera/region/hk/browser.js
-share/opera/region/hk/turbosettings.xml
-share/opera/region/id/bookmarks.adr
-share/opera/region/id/search.ini
-share/opera/region/id/standard_speeddial.ini
-share/opera/region/in/bookmarks.adr
-share/opera/region/in/search.ini
-share/opera/region/in/standard_speeddial.ini
-share/opera/region/ke/bookmarks.adr
-share/opera/region/ke/standard_speeddial.ini
-share/opera/region/kz/bookmarks.adr
-share/opera/region/kz/search.ini
-share/opera/region/kz/standard_speeddial.ini
-share/opera/region/latin_america/bookmarks.adr
-share/opera/region/latin_america/search.ini
-share/opera/region/latin_america/standard_speeddial.ini
-share/opera/region/middle_east/bookmarks.adr
-share/opera/region/middle_east/search.ini
-share/opera/region/middle_east/standard_speeddial.ini
-share/opera/region/mx/bookmarks.adr
-share/opera/region/mx/search.ini
-share/opera/region/mx/standard_speeddial.ini
-share/opera/region/my/bookmarks.adr
-share/opera/region/my/standard_speeddial.ini
-share/opera/region/ng/bookmarks.adr
-share/opera/region/ng/standard_speeddial.ini
-share/opera/region/ph/bookmarks.adr
-share/opera/region/ph/standard_speeddial.ini
-share/opera/region/pk/bookmarks.adr
-share/opera/region/pk/standard_speeddial.ini
-share/opera/region/region.ini
-share/opera/region/ru/bookmarks.adr
-share/opera/region/ru/search.ini
-share/opera/region/ru/standard_speeddial.ini
-share/opera/region/se/bookmarks.adr
-share/opera/region/se/standard_speeddial.ini
-share/opera/region/tw/browser.js
-share/opera/region/tw/turbosettings.xml
-share/opera/region/ua/ru/bookmarks.adr
-share/opera/region/ua/ru/search.ini
-share/opera/region/ua/ru/standard_speeddial.ini
-share/opera/region/us/bookmarks.adr
-share/opera/region/us/search.ini
-share/opera/region/us/standard_speeddial.ini
-share/opera/region/vn/bookmarks.adr
-share/opera/region/vn/standard_speeddial.ini
-share/opera/region/za/bookmarks.adr
-share/opera/region/za/standard_speeddial.ini
-share/opera/skin/standard_skin.zip
-share/opera/skin/unix_skin.zip
-share/opera/styles/about.css
-share/opera/styles/cache.css
-share/opera/styles/certinfo.css
-share/opera/styles/config.css
-share/opera/styles/contentblock.css
-share/opera/styles/cpu.css
-share/opera/styles/debug.css
-share/opera/styles/dir.css
-share/opera/styles/error.css
-share/opera/styles/feed.css
-share/opera/styles/gpu.css
-share/opera/styles/history.css
-share/opera/styles/im.css
-share/opera/styles/image.css
-share/opera/styles/images/Opera_256x256.png
-share/opera/styles/images/arrow.png
-share/opera/styles/images/bar.png
-share/opera/styles/images/bkgd-rev.png
-share/opera/styles/images/bkgd.png
-share/opera/styles/images/bullet.png
-share/opera/styles/images/center.png
-share/opera/styles/images/container.png
-share/opera/styles/images/customize.gif
-share/opera/styles/images/darkBox.png
-share/opera/styles/images/defaultFavicon.png
-share/opera/styles/images/error.png
-share/opera/styles/images/file.png
-share/opera/styles/images/flag.png
-share/opera/styles/images/folder.png
-share/opera/styles/images/hanger.png
-share/opera/styles/images/opera-icon-red.png
-share/opera/styles/images/opera.png
-share/opera/styles/images/page-bot.png
-share/opera/styles/images/red_center.png
-share/opera/styles/images/red_left.png
-share/opera/styles/images/red_right.png
-share/opera/styles/images/root.png
-share/opera/styles/images/search.png
-share/opera/styles/images/section.png
-share/opera/styles/images/smartGroup.png
-share/opera/styles/images/tooltiptail.png
-share/opera/styles/images/top.png
-share/opera/styles/images/warning.png
-share/opera/styles/info.css
-share/opera/styles/m2_upgrade_1160.mbs
-share/opera/styles/m2_welcome_message.mbs
-share/opera/styles/mail.css
-share/opera/styles/mathml.css
-share/opera/styles/media.css
-share/opera/styles/message.css
-share/opera/styles/mime.css
-share/opera/styles/opera.css
-share/opera/styles/plugins.css
-share/opera/styles/private.css
-share/opera/styles/search.css
-share/opera/styles/unstyledxml.css
-share/opera/styles/user/accessibility.css
-share/opera/styles/user/altdebugger.css
-share/opera/styles/user/classid.css
-share/opera/styles/user/contrastbw.css
-share/opera/styles/user/contrastwb.css
-share/opera/styles/user/disablebreaks.css
-share/opera/styles/user/disablefloats.css
-share/opera/styles/user/disableforms.css
-share/opera/styles/user/disablepositioning.css
-share/opera/styles/user/disabletables.css
-share/opera/styles/user/outline.css
-share/opera/styles/user/structureblock.css
-share/opera/styles/user/structureinline.css
-share/opera/styles/user/structuretables.css
-share/opera/styles/user/tablelayout.css
-share/opera/styles/user/toc.css
-share/opera/styles/warning.css
-share/opera/styles/webfeeds.html
-share/opera/styles/webstorage.css
-share/opera/styles/wml.css
-share/opera/ui/dialog.ini
-share/opera/ui/dialogs.yml
-share/opera/ui/fastforward.ini
-share/opera/ui/standard_keyboard.ini
-share/opera/ui/standard_keyboard_compat.ini
-share/opera/ui/standard_menu.ini
-share/opera/ui/standard_mouse.ini
-share/opera/ui/standard_toolbar.ini
-share/opera/ui/unix_keyboard.ini
-share/opera/ui/widgets.yml
