@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.2330 2021/04/25 04:43:31 wiz Exp $
+$NetBSD: CHANGES-2021,v 1.2331 2021/04/25 06:56:09 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -3667,3 +3667,4 @@ Changes to the packages collection and infrastructure in 2021:
 	Updated www/hackernews-tui to 0.5.0 [pin 2021-04-24]
 	Updated security/pleaser to 0.4.0 [pin 2021-04-24]
 	Removed wm/fvwm1 successor wm/fvwm [wiz 2021-04-25]
+	Removed www/opera [wiz 2021-04-25]
